objects/testai__c.object
<CustomObject>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>employees__c</fullName>
        <label>employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fortune_500__c</fullName>
        <defaultValue>false</defaultValue>
        <label>fortune_500</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>founded__c</fullName>
        <label>founded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>industry__c</fullName>
        <label>industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>medical_condition__c</fullName>
        <label>medical condition</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>non_profit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>non_profit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>phone_number__c</fullName>
        <label>phone_number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rating__c</fullName>
        <label>rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>cold</fullName>
                </value>
                <value>
                    <fullName>warm</fullName>
                </value>
                <value>
                    <fullName>hot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>social_security_number__c</fullName>
        <label>social security number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>website__c</fullName>
        <label>website</label>
        <type>Url</type>
    </fields>
    <label>testai</label>
    <nameField>
        <label>testai Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>testais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_Have_Some_Employees</fullName>
        <active>true</active>
        <errorConditionFormula>employees__c &gt; 0</errorConditionFormula>
        <errorMessage>You must have some employees</errorMessage>
    </validationRules>
</CustomObject>